--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -4,7 +4,7 @@ name: Deploy to AWS Lambda
 
 on:
   push:
-    branches: ["main", "ci/test-aws-lambda-deploy"]
+    branches: ["main"]
 
 permissions:
   id-token: write # This is required for OIDC authentication
