fix(ci): Fix AWS lambda production deployment action

--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -12,6 +12,8 @@ permissions:
 
 jobs:
   deploy:
+    env:
+      AWS_REGION: ap-northeast-2
     name: Deploy
     runs-on: ubuntu-latest
     environment: production
