--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -4,7 +4,7 @@ name: Deploy to AWS Lambda
 
 on:
   push:
-    branches: ["ci/test-aws-lambda-deploy"]
+    branches: ["main"]
 
 permissions:
   id-token: write # This is required for OIDC authentication
@@ -12,15 +12,13 @@ permissions:
 
 jobs:
   deploy:
-    env:
-      AWS_REGION: ap-northeast-2
     name: Deploy
     runs-on: ubuntu-latest
     environment: production
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v4
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -38,8 +36,5 @@ jobs:
       - name: Deploy Lambda Function
         uses: aws-actions/aws-lambda-deploy@v1.1.0
         with:
-          function-name: my-function-name
-          code-artifacts-dir: my-code-artifacts-dir
-          handler: index.handler
-          runtime: nodejs22.x
-          # Add any additional inputs this action supports
+          function-name: subscription-killer-api-prod-api
+          code-artifacts-dir: ./build/distributions
