ci(deployment): Skip test when building on github actions

--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -34,7 +34,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build -x test
 
       - name: Deploy Lambda Function
         uses: aws-actions/aws-lambda-deploy@v1.1.0
