--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,3 +6,6 @@ spring:
     url: jdbc:postgresql://${DB_ENDPOINT}:5432/${DB_NAME}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
+  jpa:
+    hibernate:
+      ddl-auto: update
