--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,3 +9,43 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+app:
+  cors:
+    allowed-methods:
+      - GET
+      - POST
+      - PUT
+      - DELETE
+      - OPTIONS
+    max-age: 3600
+
+---
+spring:
+  config:
+    activate:
+      on-profile: production
+app:
+  cors:
+    allowed-origins:
+      - https://subscription-killer-git-main-matchalab-project.vercel.app
+---
+spring:
+  config:
+    activate:
+      on-profile: development
+app:
+  cors:
+    allowed-origins:
+      - https://subscription-killer-git-main-matchalab-project.vercel.app
+      - https://subscription-killer-git-staging-matchalab-project.vercel.app
+      - https://localhost:3000
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
+---
+spring:
+  config:
+    activate:
+      on-profile: local
