feat: authenticate users based on Google Token Id for /api/v1/auth endpoint

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -41,9 +41,11 @@ app:
       - https://localhost:3000
 logging:
   level:
+    com.matchalab.subscription_killer_api: DEBUG
     org:
       springframework:
         security: DEBUG
+        web.filter: DEBUG
 ---
 spring:
   config:
