--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,5 +10,33 @@ services:
       - "POSTGRES_PASSWORD=hello_guest"
     volumes:
       - pgdata:/var/lib/postgresql/data
+
+  elasticsearch:
+    image: ghcr.io/openzipkin/zipkin-elasticsearch8:latest
+    container_name: elasticsearch
+    # Bind Mount: Survives 'docker compose down -v'
+    volumes:
+      - ./elasticsearch_data:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:9200/_cluster/health || exit 1" ]
+      interval: 20s
+      timeout: 10s
+      retries: 5
+    environment:
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+
+  zipkin:
+    image: openzipkin/zipkin:latest
+    container_name: zipkin
+    depends_on:
+      - elasticsearch
+    ports:
+      - "9411:9411"
+    environment:
+      - STORAGE_TYPE=elasticsearch
+      - ES_HOSTS=http://elasticsearch:9200
+
 volumes:
   pgdata:
