--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,5 +38,18 @@ services:
       - STORAGE_TYPE=elasticsearch
       - ES_HOSTS=http://elasticsearch:9200
 
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - grafana_data:/var/lib/grafana
+    depends_on:
+      - zipkin
+
 volumes:
   pgdata:
+  grafana_data:
