--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,6 +32,10 @@ spring:
     jdbc:
       initialize-schema: always
     timeout: 3d
+  ai:
+    google:
+      genai:
+        enabled: false
   autoconfigure:
     exclude:
       - org.springframework.ai.model.google.genai.autoconfigure.chat.GoogleGenAiChatAutoConfiguration
