--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ env:
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
 
 permissions:
   id-token: write # This is required for OIDC authentication
@@ -36,8 +36,10 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build -x test
 
-      - name: Deploy Lambda Function
+      - name: Deploy Lambda function via S3
         uses: aws-actions/aws-lambda-deploy@v1.1.0
         with:
-          function-name: subscription-killer-api-prod-api
-          code-artifacts-dir: ./build/distributions
+          function-name: subscription-killer-api-handler-staging
+          code-artifacts-dir: build/distributions
+          s3-bucket: subscription-killer-api-staging-deploy
+          s3-key: subscription-killer-api.zip
