--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,9 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build -x test
+        run: ./gradlew test buildZip
+        env:
+          SPRING_PROFILES_ACTIVE: ci
 
       - name: Deploy Lambda function via S3
         uses: aws-actions/aws-lambda-deploy@v1.1.0
