ci(github-actions): migrate from aws-actions to aws-cli

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,10 +38,21 @@ jobs:
         env:
           SPRING_PROFILES_ACTIVE: ci
 
-      - name: Deploy Lambda function via S3
-        uses: aws-actions/aws-lambda-deploy@v1.1.0
-        with:
-          function-name: ${{ env.AWS_FUNCTION_NAME }}
-          code-artifacts-dir: build/distributions
-          s3-bucket: ${{ env.AWS_S3_BUCKET }}
-          s3-key: subscription-killer-api.zip
+      - name: Upload to S3
+        run: |
+          aws s3 cp build/distributions/*.zip s3://${{ secrets.AWS_S3_BUCKET }}/subscription-killer-api.zip
+
+      - name: Deploy Lambda Function
+        run: |
+          aws lambda update-function-code \
+            --function-name ${{ secrets.AWS_FUNCTION_NAME }} \
+            --s3-bucket ${{ secrets.AWS_S3_BUCKET }} \
+            --s3-key subscription-killer-api.zip
+
+#      - name: Deploy Lambda function via S3
+#        uses: aws-actions/aws-lambda-deploy@v1.1.0
+#        with:
+#          function-name: ${{ env.AWS_FUNCTION_NAME }}
+#          code-artifacts-dir: build/distributions
+#          s3-bucket: ${{ env.AWS_S3_BUCKET }}
+#          s3-key: subscription-killer-api.zip
