--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,12 +12,9 @@ spring:
     name: subscription-killer-api
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://${DB_ENDPOINT}:5432/${DB_NAME}
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
   session:
     jdbc:
       initialize-schema: always
@@ -27,6 +24,13 @@ spring:
       chat: none
 server:
   forward-headers-strategy: framework
+  servlet:
+    session:
+      cookie:
+        same-site: none
+        secure: true
+        path: /
+
 management:
   zipkin:
     tracing:
@@ -66,6 +70,7 @@ spring:
           google:
             client-id: ${APP_GOOGLE_CLIENT_ID}
             client-secret: ${APP_GOOGLE_CLIENT_SECRET}
+            redirect-uri: ${FRONTEND_URL}/api/login/oauth2/code/google
             client-authentication-method: client_secret_basic
             scope:
               - openid
@@ -90,6 +95,9 @@ spring:
       on-profile: dev
   reactor:
     context-propagation: auto
+  jpa:
+    hibernate:
+      ddl-auto: update
 management:
   tracing:
     enabled: true
@@ -149,6 +157,17 @@ spring:
       observations:
         log-prompt: false
         log-completion: false
+---
+
+spring:
+  config:
+    activate:
+      on-profile: local-ssl
+server.port: 8443
+server.ssl.key-store: classpath:certs/keystore.p12
+server.ssl.key-store-password: password
+server.ssl.key-store-type: PKCS12
+server.ssl.key-alias: 1
 ---
 
 spring:
